# project-mm-r

./: .gitignore  Cargo.toml  Makefile  README.md  context.md  start-all.sh  todo
.cargo/: config.toml
admin-panel/: index.html  script.js  style.css
admin-server/: Cargo.toml
admin-server/src/: main.rs
backend/: Cargo.toml
backend/src/: admin.rs  game_server.rs  main.rs
client/: Cargo.toml
client/src/: main.rs
common/src/: lib.rs
crate/ipc/: Cargo.toml
crate/ipc/src/: lib.rs
crate/world/: Cargo.toml
crate/world/src/: lib.rs
game-server/: Cargo.toml
game-server/src/: auth.rs  main.rs
web-client/: game.js  index.html  style.css
