[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
world = { path = "../crate/world" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1"
futures = "0.3"
