[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
world = { path = "../crate/world" }
ipc = { path = "../crate/ipc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.3", features = ["cors"] }
